2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/loadenv.c (grub_cmd_list_env): Move print_var
	out of its parent.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c: Remove nested functions.

2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfsplus.c (grub_hfsplus_btree_iterate_node): Pass
	the context through.
	(grub_hfsplus_iterate_dir): Move nested function out of its parent.

2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-editenv.c (list_variables): Move print_var out of its
	parent.

2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (read_device_map): Remove nested
	function.

2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gentrigtables.c: Make tables const.

2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove nested functions from videoinfo iterators.

2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/pc/linux.c (grub_cmd_linux): Fix compilation
	for 64-bit platforms.

2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/efi/efidisk.c: Transform iterate_child_devices into
	a FOR_CHILDREN macro.

2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/main.c (grub_set_prefix_and_root): Strip trailing
	platform from firmware path.

2013-02-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable linux16 on non-BIOS systems for i.a. memtest.

	* grub-core/loader/i386/pc/linux.c (grub_cmd_linux): Handle hole at 0
	correctly.
	* grub-core/Makefile.core.def (linux16): Enable on all x86 flavours.

2013-02-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/coreboot/mmap.c (grub_linuxbios_table_iterate):
	Fix end of table condition.

2013-02-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arg.c (grub_arg_show_help): Move showargs
	out of its parent.

2013-02-28  Vladimir Serbinenko  <phcoder@gmail.com>
